2011-08-11  Andras Becsi  <abecsi@webkit.org>

        [GTK] Fix the build after r92792.

        Rubber-stamped by Csaba Osztrogonác.

        No new tests needed.

        * GNUmakefile.list.am: add missing
           RenderFlowThread.{cpp|h}
           RenderRegion.{cpp|h}

2011-08-11  Renata Hodovan  <reni@webkit.org>

        [Qt] Fix WebGL on Windows after r92805 
        https://bugs.webkit.org/show_bug.cgi?id=66042

        WEBGL is temporarly disabled, because it broked the bots.

        * features.pri:

2011-08-11  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: do not evaluate watch expressions on load.
        https://bugs.webkit.org/show_bug.cgi?id=66002

        Reviewed by Yury Semikhatsky.

        * inspector/front-end/ScriptsPanel.js:
        (WebInspector.ScriptsPanel.prototype.show):
        (WebInspector.ScriptsPanel.prototype.hide):
        (WebInspector.ScriptsPanel.prototype.reset):
        * inspector/front-end/WatchExpressionsSidebarPane.js:
        (WebInspector.WatchExpressionsSidebarPane):
        (WebInspector.WatchExpressionsSidebarPane.prototype.hide):
        (WebInspector.WatchExpressionsSidebarPane.prototype.reset):
        (WebInspector.WatchExpressionsSidebarPane.prototype.refreshExpressions):
        (WebInspector.WatchExpressionsSidebarPane.prototype._refreshExpressionsIfNeeded):
        (WebInspector.WatchExpressionsSidebarPane.prototype._refreshButtonClicked):

2011-08-10  Ryosuke Niwa  <rniwa@webkit.org>

        Copying can result in span around block elements on the clipboard
        https://bugs.webkit.org/show_bug.cgi?id=34564

        Reviewed by Tony Chang.

        Completely overhauled the way WebKit preserves style in copy and paste. Instead of wrapping the entire
        serialized contents by a Apple style span, WebKit now adds inline style to the top level elements,
        wrap top level text nodes by a style span.

        * editing/EditingStyle.cpp: